# tourist-map

./: CMakeLists.txt  infotip.cpp  mainwindow.h  road.cpp  road.h  spoteditor.cpp  touristmap.cpp  touristmap.h
.github/workflows/: ci.yml  install-qt.yml
src/: main.cpp
src/core/: global.h  mode.h  touristmap.cpp  touristmap.h
src/models/: mapitem.cpp  mapitem.h  mapscene.cpp  mapscene.h  node.cpp  node.h  road.cpp  road.h  spot.cpp  spot.h
src/ui/: infotip.cpp  infotip.h  mainwindow.cpp  mainwindow.h  mapview.cpp  mapview.h  newmapwindow.cpp  newmapwindow.h  spoteditor.cpp  spoteditor.h
